# jobboard_app

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/jobboard_app/: manage.py
src/jobboard_app/accounts/: admin.py  models.py  views.py
src/jobboard_app/accounts/migrations/: 0001_initial.py  0002_alter_city_options_alter_contract_options_and_more.py  0002_initial.py  0003_populate_tables_with_defaults.py  0003_tag_profile_tags.py  0004_alter_profile_status.py  0005_alter_adress_unique_together.py  0006_alter_adress_office_number.py  0007_rename_image_profile_avatar.py
src/jobboard_app/accounts/models/: __init__.py  address.py  adress.py  city.py  country.py  gender.py  profile.py
src/jobboard_app/accounts/presentation/: urls.py
src/jobboard_app/core/: admin.py  forms.py  models.py  populate_db.py  tests.py  urls.py  views.py
src/jobboard_app/core/business_logic/: exceptions.py
src/jobboard_app/core/migrations/: 0001_initial.py  0002_alter_adress_options_alter_company_options_and_more.py  0002_populate_tables_with_defaults.py  0003_alter_response_status_alter_salary_max_salary_and_more.py  0003_alter_response_unique_together.py  0003_remove_position_employees_remove_sector_companies_and_more.py  0004_alter_company_web_site.py  0004_vacancy_years_exp.py  0005_rename_employees_number_employeesnumber.py
src/jobboard_app/core/models/: __init__.py  company.py  contract.py  employee.py  (+17 more)
src/jobboard_app/jobboard_app/: asgi.py  logger_formatter.py  settings.py  urls.py  wsgi.py
src/jobboard_app/templates/: base.html
(+48 files in other folders)
