[tool.poetry]
name = "jobboard-app"
version = "0.1.0"
description = ""
authors = ["san0kq <sanromanov94@gmail.com>"]
readme = "README.md"
packages = [{include = "jobboard_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"
pre-commit = "3.3.3"
flake8 = "6.0.0"
pep8-naming = "0.13.3"
flake8-builtins = "2.1.0"
isort = "5.12.0"
black = "^23.3.0"
mypy = "^1.3.0"
python-decouple = "3.8"
psycopg2-binary = "2.9.6"
pillow = "9.5.0"
dacite = "1.8.1"
requests = "^2.31.0"

[tool.isort]
profile = "black"

[tool.black]
skip-string-normalization = true
line-length = 111

[tool.mypy]
mypy_path = "src/jobboard_app"
disallow_untyped_defs = true 
check_untyped_defs = true 
strict_optional = true 
no_implicit_optional = true 
warn_return_any = true 
show_error_codes = true 
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
